# monty

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
monty/: __init__.py  settings.py  wsgi.py
monty/books/: route.py  views.py
monty/core/: errors.py  exceptions.py  mixins.py  monty.py  path.py  response.py  view.py
monty/home/: route.py
monty/templates/: loader.py  render.py
server/: asgi.py  wsgi.py
server/books/: route.py  views.py
server/core/: exceptions.py  settings.py
server/home/: route.py  views.py
server/templates/: home.html
tests/: conftest.py  test_books.py  test_monty.py
tests/fixtures/: client.py
