[tool.poetry]
name = "monty"
version = "0.1.0"
description = ""
authors = ["Denis Diveev <ddiveev99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = "^0.17.5"
WebOb = "^1.8.7"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
